apps/tools/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tools
  template:
    metadata:
      labels:
        app: tools
        app.kubernetes.io/name: tools
    spec:
      containers:
        - name: tools
          image: "ghcr.io/corentinth/it-tools:2024.10.22-7ca5933"
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
