apps/tools/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: tools
