apps/tools/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.kube.dev.cturner.xyz`)
      kind: Rule
      services:
        - name: tools
          port: 80
  tls: {}
